# vulkanmitts

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  HowToBuildLinuxVersion.md  HowToUpdateVulkanSDK.md  LICENSE  LICENSE.md  README.md  cli.ps1  cube_data.py  fragment_shader.glsl  genswigi.py  genswigi_warnings_v1.0.57.txt  genswigi_warnings_v1.0.65.txt  genswigi_warnings_v1.3.246.txt  glsl_to_spv.py  hello_pyvkoffscreen.py  hello_pyvulkan.py  hello_vulkanmitts.py  hello_vulkanmittsoffscreen.py  hellovk.py  message_callback.ixx  pyglslang.i  pyvulkan.i  setup.py  shared_ptrs.ixx  test_pyglslang.py  test_pyvulkan.py  test_pyvulkan_no_window.py  test_vulkanmitts.py  test_vulkanmitts_no_window.py  transforms.py  vertex_shader.glsl  vk_cpp_wo_warnings.h  vkcontextmanager.py  vkcpp.ixx  vulkan.ixx  vulkanmitts.i  winapp.py
conda-recipes/pyglslang/: bld.bat  build.sh  meta.yaml
conda-recipes/pyvulkan/: bld.bat  build.sh  meta.yaml
conda-recipes/vulkanmitts/: bld.bat  build.sh  meta.yaml
docker/ubuntu-dev/: Dockerfile
numpy_swig/: numpy.i
windows/vulkansdksamples/: build_windows_samples.bat
